# shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md  arquitectura.md  build.sh  main.cpp  main.old.cpp  readme.md  run.sh
GLS/include/GLS/: AudioListenerComponent.hpp  AudioManager.hpp  AudioPlayer.hpp  Body.hpp  CameraComponent.hpp  GameObject.hpp  KMovement.hpp  Listener.hpp  Model.hpp  Renderer.hpp  Scene.hpp  ScriptComponent.hpp  Shader.hpp  TransformComponent.hpp  Utils.hpp  Window.hpp
GLS/include/GLS_old/: AudioSourceComponent.hpp  Body.hpp  Light.hpp  Path.hpp  Physics.hpp  Shader.hpp  Texture.hpp  Utils.hpp
assets/models/: cilinder.fbx  dado.fbx  sphere.fbx  suzanne.fbx
assets/models/pj/: base_basic_shaded.fbx
include/: AudioManager.hpp  Body.hpp  CameraComponent.hpp  Component.hpp  Context.hpp  DirectionalLight.hpp  Game.hpp  GameObject.hpp  HitboxRenderer.hpp  Input.hpp  JoltTest.hpp  KMovement.hpp  Level.hpp  Light.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  ModelComponent.hpp  Movement.hpp  Obstacle.hpp  Physics.hpp  Renderer.hpp  RmlUiInterface.hpp  Scene.hpp  Scripts.hpp  Shader.h  Shader.hpp  SkyBox.hpp  Skybox.hpp  Texture.hpp  TransformComponent.hpp  UIManager.hpp  Utils.hpp  Window.h  Window.hpp  inputManager.hpp  skyBox.hpp  skyboxLoader.hpp
models/: dado.fbx  sphere.fbx  suzanne.fbx
models/cofre/: base.fbx
models/cuteplant/: base.fbx  base_basic_shaded.fbx
models/filthy-prison-toilet-4096px2/source/: toilet.fbx
models/pj/: base.fbx
shaders/: basic.frag.glsl  basic.vert.glsl  basic2.frag.glsl  line.frag  line.vert  pbr.frag  pbr.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
src/: AudioListenerComponent.cpp  AudioListenerSource.cpp  AudioManager.cpp  AudioPlayer.cpp  Body.cpp  CameraComponent.cpp  Component.cpp  Context.cpp  DirectionalLight.cpp  Game.cpp  GameObject.cpp  HitboxRenderer.cpp  Input.cpp  KMovement.cpp  Level.cpp  Light.cpp  Listener.cpp  Mesh.cpp  Model.cpp  ModelComponent.cpp  Obstacle.cpp  Path.cpp  Physics.cpp  Renderer.cpp  RmlUiInterface.cpp  Scene.cpp  ScriptComponent.cpp  Scripts.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  TransformComponent.cpp  UIManager.cpp  Window.cpp  inputManager.cpp  main.cpp  skyBox.cpp
ui/: gameover.rml  lives_counter.rml  pause_menu.rml  test.rml  you_win.rml
